# yoshi

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  PRD.md  README.md  ROADMAP.md  deny.toml  install.sh  release-please-config.json
.github/workflows/: ci.yml  release.yml
assets/icon/: yoshi.icns
assets/linux/: yoshi.desktop
assets/macos/: Info.plist
crates/yoshi-app/: Cargo.toml
crates/yoshi-app/src/: kernel.rs  main.rs  text_input.rs
crates/yoshi-cli/: Cargo.toml
crates/yoshi-cli/src/: lib.rs
crates/yoshi-editor/: Cargo.toml
crates/yoshi-kernels/: Cargo.toml
crates/yoshi-notebook/: Cargo.toml
crates/yoshi-outputs/: Cargo.toml
crates/yoshi-ui-kit/: Cargo.toml
docs/epics/: E1-framework-bake-off.md  E10-workspace-shell.md  E11-terminal.md  E12-remote-kernels.md  E2-ci-unsigned-artifacts.md  E3-kernel-runtime.md  E4-notebook-document-model.md  E5-cell-editor.md  E6-notebook-ui.md  E7-output-rendering-tier-1.md  E8-v01-hardening-distribution.md  E9-rich-outputs-tier-2.md
docs/write-ups/: E1-framework-bake-off.md  E2-ci-unsigned-artifacts.md
script/: bench-download-size  bootstrap  install-linux-build-deps  package-linux  package-macos  run  smoke-test
spikes/gpui-spike/: CAPTURES.md  Cargo.toml  deny.toml
spikes/gpui-spike/src/: main.rs
spikes/warpui-spike/: CAPTURES.md  Cargo.toml  deny.toml
spikes/warpui-spike/.cargo/: config.toml
spikes/warpui-spike/src/: main.rs
xtask/: Cargo.toml
