[workspace]
resolver = "3"
members = [
    "crates/yoshi-app",
    "crates/yoshi-editor",
    "crates/yoshi-ui-kit",
    "crates/yoshi-notebook",
    "crates/yoshi-kernels",
    "crates/yoshi-outputs",
    "crates/yoshi-cli",
    "xtask",
]

[workspace.package]
version = "0.0.0" # x-release-please-version
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/oxmonty/yoshi"
