[package]
name = "yoshi-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "yoshi"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-dispatcher = "0.1"
futures = "0.3"
gpui = "0.2.2"
jupyter-protocol = "2"
jupyter-zmq-client = { version = "1", features = ["async-dispatcher-runtime"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
